--- a/JPADogSitting/.settings/org.eclipse.buildship.core.prefs
+++ b/JPADogSitting/.settings/org.eclipse.buildship.core.prefs
@@ -1,3 +1,3 @@
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=
+connection.project.dir=../MVCDogSitting
 eclipse.preferences.version=1
