--- a/JPADogSitting/build.gradle
+++ b/JPADogSitting/build.gradle
@@ -34,7 +34,15 @@ sourceSets {
     java.srcDirs 'src'
     resources.srcDirs 'src/resources'
   }
- }
+  test {
+    java {
+      srcDir 'test'
+    }
+    resources {
+      srcDir 'src'
+    }
+  }
+}
 
 // set query location for dependencies
 repositories {
@@ -48,5 +56,8 @@ dependencies {
   compile "log4j:log4j:1.2.17"
   compile "org.hibernate:hibernate-core:$hibernateVersion"
   compile "org.hibernate:hibernate-c3p0:$hibernateVersion"
+  
+  testCompile 'junit:junit:4.12'
+  testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
   
 }
