--- a/MVCDogSitting/build.gradle
+++ b/MVCDogSitting/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.2.4.Final'
     compile "org.springframework:spring-test:$springVersion"
     compile "org.springframework:spring-tx:$springVersion"
+    compile "org.hibernate:hibernate-validator:5.3.4.Final"
     
     compile group: 'org.springframework', name: 'spring-orm', version:"$springVersion"
     
