--- a/JPADogSitting/build.gradle
+++ b/JPADogSitting/build.gradle
@@ -56,6 +56,7 @@ dependencies {
   compile "log4j:log4j:1.2.17"
   compile "org.hibernate:hibernate-core:$hibernateVersion"
   compile "org.hibernate:hibernate-c3p0:$hibernateVersion"
+  compile "org.hibernate:hibernate-validator:5.3.4.Final"
   
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
