--- a/MVCDogSitting/WebContent/WEB-INF/ValidationMessages.properties
+++ b/MVCDogSitting/WebContent/WEB-INF/ValidationMessages.properties
@@ -5,3 +5,9 @@ user.userName=User Name already taken; pick another.
 
 login.userName=User Name not found...are you registered?
 login.password=Email and password combination do not match...
+
+Pattern.contact.zipCode=Please enter valid zipCode (XXXXX) or (XXXXX-XXX)
+Pattern.contact.phone=Please enter valid PhoneNumber (XXX-XXX-XXXX)
+Pattern.user.password=Password length must be between 4~8 letters and must have at least one number
+Size.contact.firstName=Name must be more than 2 letters and less than 100
+Size.contact.lastName=Name must be more than 2 letters and less than 100
